now I almost make the design on my web that I want but it have distort from design on flip page a little bit.so I fix them

--- a/doodoang_project/src/pages/css/flip.css
+++ b/doodoang_project/src/pages/css/flip.css
@@ -2,8 +2,13 @@
   perspective: 1000px;
 }
 
-.preserve-3d {
+.preserve3D {
+  transition: transform 0.7s;
   transform-style: preserve-3d;
+}
+
+.flip180 {
+  transform: rotateY(180deg);
 }
 
 .backface-hidden {
